[gd_scene load_steps=5 format=4 uid="uid://drsn8la34lgq"]

[ext_resource type="Script" uid="uid://ttgyh3103f4f" path="res://scenes/waves/large_wave/large_wave.gd" id="1_63i0f"]
[ext_resource type="TileSet" uid="uid://yxqmn0rktuiw" path="res://scenes/waves/large_wave/LargeWave.tres" id="2_p2d4g"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_63i0f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2d4g"]
size = Vector2(1257, 12)

[node name="LargeWave" type="Node2D"]
script = ExtResource("1_63i0f")

[node name="BottomBoundary" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBoundary"]
position = Vector2(0, 384)
shape = SubResource("WorldBoundaryShape2D_63i0f")

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-18, 336, 640, 336)
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="StartingPosition" type="Marker2D" parent="."]
position = Vector2(231, 117)

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 480)
repeat_times = 13

[node name="Sky" type="TileMapLayer" parent="Parallax2D"]
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAgAAAAAAAEAAAAKAAgAAAAAAAIAAAAKAAgAAAAAAAMAAAAKAAgAAAAAAAQAAAAKAAgAAAAAAAUAAAAKAAgAAAAAAAYAAAAKAAgAAAAAAAcAAAAKAAgAAAAAAAgAAAAKAAgAAAAAAAkAAAAKAAgAAAABAAAAAAAKAAgAAAABAAEAAAAKAAgAAAABAAIAAAAKAAgAAAABAAMAAAAKAAgAAAABAAQAAAAKAAgAAAABAAUAAAAKAAgAAAABAAYAAAAKAAgAAAABAAcAAAAKAAgAAAABAAgAAAAKAAgAAAABAAkAAAAKAAgAAAACAAAAAAAKAAgAAAACAAEAAAAKAAgAAAACAAIAAAAKAAgAAAACAAMAAAAKAAgAAAACAAQAAAAKAAgAAAACAAUAAAAKAAgAAAACAAYAAAAKAAgAAAACAAcAAAAKAAgAAAACAAgAAAAKAAgAAAACAAkAAAAKAAgAAAADAAAAAAAKAAgAAAADAAEAAAAKAAgAAAADAAIAAAAKAAgAAAADAAMAAAAKAAgAAAADAAQAAAAKAAgAAAADAAUAAAAKAAgAAAADAAYAAAAKAAgAAAADAAcAAAAKAAgAAAADAAgAAAAKAAgAAAADAAkAAAAKAAgAAAAEAAAAAAAKAAgAAAAEAAEAAAAKAAgAAAAEAAIAAAAKAAgAAAAEAAMAAAAKAAgAAAAEAAQAAAAKAAgAAAAEAAUAAAAKAAgAAAAEAAYAAAAKAAgAAAAEAAcAAAAKAAgAAAAEAAgAAAAKAAgAAAAEAAkAAAAKAAgAAAAFAAAAAAAKAAgAAAAFAAEAAAAKAAgAAAAFAAIAAAAKAAgAAAAFAAMAAAAKAAgAAAAFAAQAAAAKAAgAAAAFAAUAAAAKAAgAAAAFAAYAAAAKAAgAAAAFAAcAAAAKAAgAAAAFAAgAAAAKAAgAAAAFAAkAAAAKAAgAAAAGAAAAAAAKAAgAAAAGAAEAAAAKAAgAAAAGAAIAAAAKAAgAAAAGAAMAAAAKAAgAAAAGAAQAAAAKAAgAAAAGAAUAAAAKAAgAAAAGAAYAAAAKAAgAAAAGAAcAAAAKAAgAAAAGAAgAAAAKAAgAAAAGAAkAAAAKAAgAAAAHAAAAAAAKAAgAAAAHAAEAAAAKAAgAAAAHAAIAAAAKAAgAAAAHAAMAAAAKAAgAAAAHAAQAAAAKAAgAAAAHAAUAAAAKAAgAAAAHAAYAAAAKAAgAAAAHAAcAAAAKAAgAAAAHAAgAAAAKAAgAAAAHAAkAAAAKAAgAAAAIAAAAAAAKAAgAAAAIAAEAAAAKAAgAAAAIAAIAAAAKAAgAAAAIAAMAAAAKAAgAAAAIAAQAAAAKAAgAAAAIAAUAAAAKAAgAAAAIAAYAAAAKAAgAAAAIAAcAAAAKAAgAAAAIAAgAAAAKAAgAAAAIAAkAAAAKAAgAAAAJAAAAAAAKAAgAAAAJAAEAAAAKAAgAAAAJAAIAAAAKAAgAAAAJAAMAAAAKAAgAAAAJAAQAAAAKAAgAAAAJAAUAAAAKAAgAAAAJAAYAAAAKAAgAAAAJAAcAAAAKAAgAAAAJAAgAAAAKAAgAAAAJAAkAAAAKAAgAAAAKAAAAAAAKAAgAAAAKAAEAAAAKAAgAAAAKAAIAAAAKAAgAAAAKAAMAAAAKAAgAAAAKAAQAAAAKAAgAAAAKAAUAAAAKAAgAAAAKAAYAAAAKAAgAAAAKAAcAAAAKAAgAAAAKAAgAAAAKAAgAAAAKAAkAAAAKAAgAAAALAAAAAAAKAAgAAAALAAEAAAAKAAgAAAALAAIAAAAKAAgAAAALAAMAAAAKAAgAAAALAAQAAAAKAAgAAAALAAUAAAAKAAgAAAALAAYAAAAKAAgAAAALAAcAAAAKAAgAAAALAAgAAAAKAAgAAAALAAkAAAAKAAgAAAAMAAAAAAAKAAgAAAAMAAEAAAAKAAgAAAAMAAIAAAAKAAgAAAAMAAMAAAAKAAgAAAAMAAQAAAAKAAgAAAAMAAUAAAAKAAgAAAAMAAYAAAAKAAgAAAAMAAcAAAAKAAgAAAAMAAgAAAAKAAgAAAAMAAkAAAAKAAgAAAANAAAAAAAKAAgAAAANAAEAAAAKAAgAAAANAAIAAAAKAAgAAAANAAMAAAAKAAgAAAANAAQAAAAKAAgAAAANAAUAAAAKAAgAAAANAAYAAAAKAAgAAAANAAcAAAAKAAgAAAANAAgAAAAKAAgAAAANAAkAAAAKAAgAAAA=")
tile_set = ExtResource("2_p2d4g")

[node name="WaveBack" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAAEAAAAIABAAAAAEAAIAAAAIAAEAAAAEAAMAAAAIAAIAAAAEAAQAAAAJAAgAAAAEAAUAAAAIAAUAAAAEAAYAAAAIAAYAAAAEAAcAAAAAAAgAAAAFAAEAAAAIABAAAAAFAAIAAAAIAAEAAAAFAAMAAAAIAAIAAAAFAAQAAAAJAAgAAAAFAAUAAAAIAAUAAAAFAAYAAAAIAAYAAAAFAAcAAAAAAAgAAAAGAAEAAAAIAA8AAAAGAAIAAAAIAAEAAAAGAAMAAAAIAAIAAAAGAAQAAAAJAAgAAAAGAAUAAAAIAAUAAAAGAAYAAAAIAAYAAAAGAAcAAAAAAAgAAAAHAAEAAAAIAA8AAAAHAAIAAAAIAAEAAAAHAAMAAAAIAAIAAAAHAAQAAAAJAAgAAAAHAAUAAAAIAAUAAAAHAAYAAAAIAAYAAAAHAAcAAAAAAAgAAAAIAAEAAAAIABAAAAAIAAIAAAAIAAEAAAAIAAMAAAAIAAIAAAAIAAQAAAAJAAgAAAAIAAUAAAAIAAUAAAAIAAYAAAAIAAYAAAAIAAcAAAAAAAgAAAAJAAEAAAAIABAAAAAJAAIAAAAIAAEAAAAJAAMAAAAIAAIAAAAJAAQAAAAJAAgAAAAJAAUAAAAIAAUAAAAJAAYAAAAIAAYAAAAJAAcAAAAAAAgAAAAKAAEAAAAIAA8AAAAKAAIAAAAIAAEAAAAKAAMAAAAIAAIAAAAKAAQAAAAJAAgAAAAKAAUAAAAIAAUAAAAKAAYAAAAIAAYAAAAKAAcAAAAAAAgAAAALAAEAAAAIAA8AAAALAAIAAAAIAAEAAAALAAMAAAAIAAIAAAALAAQAAAAJAAgAAAALAAUAAAAIAAUAAAALAAYAAAAIAAYAAAALAAcAAAAAAAgAAAAMAAEAAAAIABAAAAAMAAIAAAAIAAEAAAAMAAMAAAAIAAIAAAAMAAQAAAAJAAgAAAAMAAUAAAAIAAUAAAAMAAYAAAAIAAYAAAAMAAcAAAAAAAgAAAANAAEAAAAIABAAAAANAAIAAAAIAAEAAAANAAMAAAAIAAIAAAANAAQAAAAJAAgAAAANAAUAAAAIAAUAAAANAAYAAAAIAAYAAAANAAcAAAAAAAgAAAAOAAEAAAAIAA8AAAAOAAIAAAAIAAEAAAAOAAMAAAAIAAIAAAAOAAQAAAAJAAgAAAAOAAUAAAAIAAUAAAAOAAYAAAAIAAYAAAAOAAcAAAAAAAgAAAAPAAEAAAAIAA8AAAAPAAIAAAAIAAEAAAAPAAMAAAAIAAIAAAAPAAQAAAAJAAgAAAAPAAUAAAAIAAUAAAAPAAYAAAAIAAYAAAAPAAcAAAAAAAgAAAAQAAEAAAAIABAAAAAQAAIAAAAIAAEAAAAQAAMAAAAIAAIAAAAQAAQAAAAJAAgAAAAQAAUAAAAIAAUAAAAQAAYAAAAIAAYAAAAQAAcAAAAAAAgAAAARAAEAAAAIABAAAAARAAIAAAAIAAEAAAARAAMAAAAIAAIAAAARAAQAAAAJAAgAAAARAAUAAAAIAAUAAAARAAYAAAAIAAYAAAARAAcAAAAAAAgAAAASAAEAAAAIAA8AAAASAAIAAAAIAAEAAAASAAMAAAAIAAIAAAASAAQAAAAJAAgAAAASAAUAAAAIAAUAAAASAAYAAAAIAAYAAAASAAcAAAAAAAgAAAATAAIAAAAIAAEAAAATAAMAAAAIAAIAAAATAAQAAAAJAAgAAAATAAUAAAAIAAUAAAATAAYAAAAIAAYAAAATAAcAAAAAAAgAAAAUAAIAAAAIAAEAAAAUAAMAAAAIAAIAAAAUAAQAAAAJAAgAAAAUAAUAAAAIAAUAAAAUAAYAAAAIAAYAAAAUAAcAAAAAAAgAAAAVAAIAAAAMAAQAAAAVAAMAAAAIAAIAAAAVAAQAAAAJAAgAAAAVAAUAAAAIAAUAAAAVAAYAAAAIAAYAAAAVAAcAAAAAAAgAAADr/wIAAAAIAAEAAADr/wMAAAAIAAIAAADr/wQAAAAJAAgAAADr/wUAAAAIAAUAAADr/wYAAAAIAAYAAADr/wcAAAAAAAgAAADs/wIAAAAIAAEAAADs/wMAAAAIAAIAAADs/wQAAAAJAAgAAADs/wUAAAAIAAUAAADs/wYAAAAIAAYAAADs/wcAAAAAAAgAAADt/wIAAAAIAAEAAADt/wMAAAAIAAIAAADt/wQAAAAJAAgAAADt/wUAAAAIAAUAAADt/wYAAAAIAAYAAADt/wcAAAAAAAgAAADu/wIAAAAIAAEAAADu/wMAAAAIAAIAAADu/wQAAAAJAAgAAADu/wUAAAAIAAUAAADu/wYAAAAIAAYAAADu/wcAAAAAAAgAAADv/wIAAAAIAAEAAADv/wMAAAAIAAIAAADv/wQAAAAJAAgAAADv/wUAAAAIAAUAAADv/wYAAAAIAAYAAADv/wcAAAAAAAgAAADw/wIAAAAIAAEAAADw/wMAAAAIAAIAAADw/wQAAAAJAAgAAADw/wUAAAAIAAUAAADw/wYAAAAIAAYAAADw/wcAAAAAAAgAAADx/wIAAAAIAAEAAADx/wMAAAAIAAIAAADx/wQAAAAJAAgAAADx/wUAAAAIAAUAAADx/wYAAAAIAAYAAADx/wcAAAAAAAgAAADy/wIAAAAIAAEAAADy/wMAAAAIAAIAAADy/wQAAAAJAAgAAADy/wUAAAAIAAUAAADy/wYAAAAIAAYAAADy/wcAAAAAAAgAAADz/wIAAAAIAAEAAADz/wMAAAAIAAIAAADz/wQAAAAJAAgAAADz/wUAAAAIAAUAAADz/wYAAAAIAAYAAADz/wcAAAAAAAgAAAD0/wIAAAAIAAEAAAD0/wMAAAAIAAIAAAD0/wQAAAAJAAgAAAD0/wUAAAAIAAUAAAD0/wYAAAAIAAYAAAD0/wcAAAAAAAgAAAD1/wIAAAAIAAEAAAD1/wMAAAAIAAIAAAD1/wQAAAAJAAgAAAD1/wUAAAAIAAUAAAD1/wYAAAAIAAYAAAD1/wcAAAAAAAgAAAD2/wIAAAAIAAEAAAD2/wMAAAAIAAIAAAD2/wQAAAAJAAgAAAD2/wUAAAAIAAUAAAD2/wYAAAAIAAYAAAD2/wcAAAAAAAgAAAD3/wIAAAAIAAEAAAD3/wMAAAAIAAIAAAD3/wQAAAAJAAgAAAD3/wUAAAAIAAUAAAD3/wYAAAAIAAYAAAD3/wcAAAAAAAgAAAD4/wIAAAAIAAEAAAD4/wMAAAAIAAIAAAD4/wQAAAAJAAgAAAD4/wUAAAAIAAUAAAD4/wYAAAAIAAYAAAD4/wcAAAAAAAgAAAD5/wIAAAAIAAEAAAD5/wMAAAAIAAIAAAD5/wQAAAAJAAgAAAD5/wUAAAAIAAUAAAD5/wYAAAAIAAYAAAD5/wcAAAAAAAgAAAD6/wIAAAAIAAEAAAD6/wMAAAAIAAIAAAD6/wQAAAAJAAgAAAD6/wUAAAAIAAUAAAD6/wYAAAAIAAYAAAD6/wcAAAAAAAgAAAD7/wIAAAAIAAEAAAD7/wMAAAAIAAIAAAD7/wQAAAAJAAgAAAD7/wUAAAAIAAUAAAD7/wYAAAAIAAYAAAD7/wcAAAAAAAgAAAD8/wIAAAAIAAEAAAD8/wMAAAAIAAIAAAD8/wQAAAAJAAgAAAD8/wUAAAAIAAUAAAD8/wYAAAAIAAYAAAD8/wcAAAAAAAgAAAD9/wIAAAAIAAEAAAD9/wMAAAAIAAIAAAD9/wQAAAAJAAgAAAD9/wUAAAAIAAUAAAD9/wYAAAAIAAYAAAD9/wcAAAAAAAgAAAD+/wIAAAAIAAEAAAD+/wMAAAAIAAIAAAD+/wQAAAAJAAgAAAD+/wUAAAAIAAUAAAD+/wYAAAAIAAYAAAD+/wcAAAAAAAgAAAD//wIAAAAIAAEAAAD//wMAAAAIAAIAAAD//wQAAAAJAAgAAAD//wUAAAAIAAUAAAD//wYAAAAIAAYAAAD//wcAAAAAAAgAAAAAAAIAAAAIAAEAAAAAAAMAAAAIAAIAAAAAAAQAAAAJAAgAAAAAAAUAAAAIAAUAAAAAAAYAAAAIAAYAAAAAAAcAAAAAAAgAAAABAAIAAAAIAAEAAAABAAMAAAAIAAIAAAABAAQAAAAJAAgAAAABAAUAAAAIAAUAAAABAAYAAAAIAAYAAAABAAcAAAAAAAgAAAACAAEAAAAIAA8AAAACAAIAAAAIAAEAAAACAAMAAAAIAAIAAAACAAQAAAAJAAgAAAACAAUAAAAIAAUAAAACAAYAAAAIAAYAAAACAAcAAAAAAAgAAAADAAEAAAAIAA8AAAADAAIAAAAIAAEAAAADAAMAAAAIAAIAAAADAAQAAAAJAAgAAAADAAUAAAAIAAUAAAADAAYAAAAIAAYAAAADAAcAAAAAAAgAAAATAAEAAAAIAA8AAAAUAAEAAAAIAAMAAAAVAAEAAAAIAAMAAAAWAAEAAAAMAAAAAAAWAAIAAAAIAAoAAAAWAAMAAAAIAAIAAAAWAAQAAAAJAAgAAAAWAAUAAAAIAAUAAAAWAAYAAAAIAAYAAAAWAAcAAAAAAAgAAAAXAAIAAAAJAAoAAAAXAAMAAAAIAAIAAAAXAAQAAAAJAAgAAAAXAAUAAAAIAAUAAAAXAAYAAAAIAAYAAAAXAAcAAAAAAAgAAAAYAAIAAAAKAAoAAAAYAAMAAAAMAAEAAAAYAAQAAAAJAAgAAAAYAAUAAAAIAAUAAAAYAAYAAAAIAAYAAAAYAAcAAAAAAAgAAAAZAAIAAAAMAAAAAAAZAAMAAAAIAAsAAAAZAAQAAAAJAAgAAAAZAAUAAAAIAAUAAAAZAAYAAAAIAAYAAAAZAAcAAAAAAAgAAAAaAAMAAAAJAAsAAAAaAAQAAAAJAAgAAAAaAAUAAAAMAAUAAAAaAAYAAAAIAAYAAAAaAAcAAAAAAAgAAAAbAAMAAAAKAAsAAAAbAAQAAAAMAAIAAAAbAAUAAAAJAAgAAAAbAAYAAAAJAAgAAAAbAAcAAAAAAAgAAAAcAAMAAAAMAAAAAAAcAAQAAAAIAAwAAAAcAAUAAAAJAAgAAAAcAAYAAAAJAAgAAAAcAAcAAAAAAAgAAAAdAAQAAAAJAAwAAAAdAAUAAAAJAAgAAAAdAAYAAAAJAAgAAAAdAAcAAAAAAAgAAAAeAAQAAAAKAAwAAAAeAAUAAAAMAAIAAAAeAAYAAAAJAAgAAAAeAAcAAAAAAAgAAAAfAAQAAAAMAAAAAAAfAAUAAAAIAAwAAAAfAAYAAAAJAAgAAAAfAAcAAAAAAAgAAAAgAAUAAAAJAAwAAAAgAAYAAAAJAAgAAAAgAAcAAAAAAAgAAAAhAAUAAAAKAAwAAAAhAAYAAAAMAAIAAAAhAAcAAAAAAAgAAAAiAAUAAAAMAAAAAAAiAAYAAAAIAAwAAAAiAAcAAAAAAAgAAAAjAAYAAAAJAAwAAAAjAAcAAAAAAAgAAAAkAAYAAAAKAAwAAAAkAAcAAAAMAAMAAAAlAAYAAAAMAAAAAAAlAAcAAAAIAA0AAAAmAAcAAAAJAA0AAAAnAAcAAAAKAA0AAAA=")
tile_set = ExtResource("2_p2d4g")
metadata/_edit_lock_ = true

[node name="WaveFront" type="TileMapLayer" parent="."]
z_index = 10
tile_map_data = PackedByteArray("AAADAAEAAAAEAAAAAAACAAEAAAAEAAEAAAABAAEAAAAEAAIAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAEAAAD9/wEAAAAAAAEAAAD8/wEAAAAAAAIAAAD7/wEAAAAAAAIAAAD6/wEAAAAAAAQAAAD5/wEAAAAAAAQAAAD4/wEAAAAAAAQAAAD3/wEAAAAAAAQAAAD2/wEAAAAAAAQAAAD1/wEAAAAAAAQAAAD0/wEAAAAAAAQAAADz/wEAAAAAAAQAAADy/wEAAAAAAAQAAADx/wEAAAAAAAQAAADw/wEAAAAAAAQAAADv/wEAAAAAAAQAAADu/wEAAAAAAAQAAADt/wEAAAAAAAQAAADs/wEAAAAAAAQAAADr/wEAAAAAAAQAAADq/wEAAAAAAAQAAADp/wEAAAAAAAQAAADo/wEAAAAAAAQAAADn/wEAAAAAAAQAAADm/wEAAAAAAAQAAADl/wEAAAAAAAQAAADk/wEAAAAAAAQAAAACAAIAAAAEAAcAAAABAAIAAAAEAAgAAAAAAAIAAAAEAAkAAAD//wMAAAAEAAkAAAD//wIAAAAAAAUAAAD+/wIAAAAAAAUAAAD+/wMAAAAAAAUAAAABAAMAAAAEAAcAAAAAAAMAAAAEAAgAAAAAAAcAAAAAAAoAAAD//wcAAAAAAAsAAAD+/wcAAAAAAAwAAAD9/wcAAAAAAAwAAAD+/wQAAAAEAAkAAAD9/wUAAAAEAAkAAAD8/wYAAAAEAA0AAAD9/wYAAAAAAAwAAAD//wQAAAAEAAgAAAD+/wUAAAAEAAUAAAD//wUAAAAEAAsAAAD//wYAAAAMAAcAAAD+/wYAAAAAAAsAAAD8/wcAAAAAAAsAAAD7/wcAAAAAAAsAAAD6/wcAAAAAAAwAAAD5/wcAAAAAAAwAAADy/wcAAAAAAAwAAADz/wcAAAAAAAwAAAD0/wcAAAAAAAsAAAD1/wcAAAAAAAsAAAD2/wcAAAAAAAwAAAD3/wcAAAAAAAwAAAD4/wcAAAAAAAsAAADr/wcAAAAAAAwAAADs/wcAAAAAAAwAAADt/wcAAAAAAAsAAADu/wcAAAAAAAsAAADv/wcAAAAAAAwAAADw/wcAAAAAAAwAAADx/wcAAAAAAAsAAADk/wcAAAAAAAwAAADl/wcAAAAAAAwAAADm/wcAAAAAAAsAAADn/wcAAAAAAAsAAADo/wcAAAAAAAwAAADp/wcAAAAAAAwAAADq/wcAAAAAAAsAAAD7/wYAAAAEAAwAAAD6/wYAAAAEAAwAAAD5/wYAAAAEAAwAAAD4/wYAAAAEAAwAAAD3/wYAAAAEAAwAAAD2/wYAAAAEAAwAAAD1/wYAAAAEAAwAAAD0/wYAAAAEAAwAAADz/wYAAAAEAAwAAADy/wYAAAAEAAwAAADx/wYAAAAEAAwAAADw/wYAAAAEAAwAAADv/wYAAAAEAAwAAADu/wYAAAAEAAwAAADt/wYAAAAEAAwAAADs/wYAAAAEAAwAAADr/wYAAAAEAAwAAADq/wYAAAAEAAwAAADp/wYAAAAEAAwAAADo/wYAAAAEAAwAAADn/wYAAAAEAAwAAADm/wYAAAAEAAwAAADl/wYAAAAEAAwAAADk/wYAAAAEAAwAAAD8/wUAAAAAAAcAAAD7/wUAAAAAAAcAAAD6/wUAAAAAAAcAAAD5/wUAAAAAAAcAAAD4/wUAAAAAAAcAAAD3/wUAAAAAAAcAAAD2/wUAAAAAAAcAAAD1/wUAAAAAAAcAAAD0/wUAAAAAAAcAAADz/wUAAAAAAAcAAADy/wUAAAAAAAcAAADx/wUAAAAAAAcAAADw/wUAAAAAAAcAAADv/wUAAAAAAAcAAADu/wUAAAAAAAcAAADt/wUAAAAAAAcAAADs/wUAAAAAAAcAAADr/wUAAAAAAAcAAADq/wUAAAAAAAcAAADp/wUAAAAAAAcAAADo/wUAAAAAAAcAAADn/wUAAAAAAAcAAADm/wUAAAAAAAcAAADl/wUAAAAAAAcAAADk/wUAAAAAAAcAAAD9/wQAAAAAAAYAAAD8/wQAAAAAAAYAAAD7/wQAAAAAAAYAAAD6/wQAAAAAAAYAAAD5/wQAAAAAAAYAAAD4/wQAAAAAAAYAAAD3/wQAAAAAAAYAAAD2/wQAAAAAAAYAAAD1/wQAAAAAAAYAAAD0/wQAAAAAAAYAAADz/wQAAAAAAAYAAADy/wQAAAAAAAYAAADx/wQAAAAAAAYAAADw/wQAAAAAAAYAAADv/wQAAAAAAAYAAADu/wQAAAAAAAYAAADt/wQAAAAAAAYAAADs/wQAAAAAAAYAAADr/wQAAAAAAAYAAADq/wQAAAAAAAYAAADk/wQAAAAAAAYAAADl/wQAAAAAAAYAAADm/wQAAAAAAAYAAADn/wQAAAAAAAYAAADo/wQAAAAAAAYAAADp/wQAAAAAAAYAAADk/wIAAAAAAAUAAADl/wIAAAAAAAUAAADm/wIAAAAAAAUAAADn/wIAAAAAAAUAAADo/wIAAAAAAAUAAADp/wIAAAAAAAUAAADq/wIAAAAAAAUAAADr/wIAAAAAAAUAAADs/wIAAAAAAAUAAADt/wIAAAAAAAUAAADu/wIAAAAAAAUAAADv/wIAAAAAAAUAAADw/wIAAAAAAAUAAADx/wIAAAAAAAUAAADy/wIAAAAAAAUAAADz/wIAAAAAAAUAAAD0/wIAAAAAAAUAAAD1/wIAAAAAAAUAAAD2/wIAAAAAAAUAAAD3/wIAAAAAAAUAAAD4/wIAAAAAAAUAAAD5/wIAAAAAAAUAAAD6/wIAAAAAAAUAAAD7/wIAAAAAAAUAAAD8/wIAAAAAAAUAAAD9/wIAAAAAAAUAAAD9/wMAAAAAAAYAAAD8/wMAAAAAAAYAAAD7/wMAAAAAAAYAAAD6/wMAAAAAAAYAAAD5/wMAAAAAAAYAAAD4/wMAAAAAAAYAAAD3/wMAAAAAAAYAAAD2/wMAAAAAAAYAAAD1/wMAAAAAAAYAAAD0/wMAAAAAAAYAAADz/wMAAAAAAAYAAADy/wMAAAAAAAYAAADx/wMAAAAAAAYAAADp/wMAAAAAAAYAAADq/wMAAAAAAAYAAADr/wMAAAAAAAYAAADs/wMAAAAAAAYAAADt/wMAAAAAAAYAAADu/wMAAAAAAAYAAADv/wMAAAAAAAYAAADw/wMAAAAAAAYAAADo/wMAAAAAAAYAAADn/wMAAAAAAAYAAADm/wMAAAAAAAYAAADl/wMAAAAAAAYAAADk/wMAAAAAAAYAAAABAAcAAAAAAAkAAAAAAAQAAAAEAAcAAADN/wIAAAAAAAUAAADN/wMAAAAAAAYAAADN/wQAAAAAAAYAAADN/wUAAAAAAAcAAADN/wYAAAAEAAwAAADN/wcAAAAAAAwAAADO/wIAAAAAAAUAAADO/wMAAAAAAAYAAADO/wQAAAAAAAYAAADO/wUAAAAAAAcAAADO/wYAAAAEAAwAAADO/wcAAAAAAAwAAADP/wIAAAAAAAUAAADP/wMAAAAAAAYAAADP/wQAAAAAAAYAAADP/wUAAAAAAAcAAADP/wYAAAAEAAwAAADP/wcAAAAAAAsAAADQ/wIAAAAAAAUAAADQ/wMAAAAAAAYAAADQ/wQAAAAAAAYAAADQ/wUAAAAAAAcAAADQ/wYAAAAEAAwAAADQ/wcAAAAAAAsAAADR/wIAAAAAAAUAAADR/wMAAAAAAAYAAADR/wQAAAAAAAYAAADR/wUAAAAAAAcAAADR/wYAAAAEAAwAAADR/wcAAAAAAAwAAADS/wIAAAAAAAUAAADS/wMAAAAAAAYAAADS/wQAAAAAAAYAAADS/wUAAAAAAAcAAADS/wYAAAAEAAwAAADS/wcAAAAAAAwAAADT/wIAAAAAAAUAAADT/wMAAAAAAAYAAADT/wQAAAAAAAYAAADT/wUAAAAAAAcAAADT/wYAAAAEAAwAAADT/wcAAAAAAAsAAADU/wIAAAAAAAUAAADU/wMAAAAAAAYAAADU/wQAAAAAAAYAAADU/wUAAAAAAAcAAADU/wYAAAAEAAwAAADU/wcAAAAAAAwAAADV/wIAAAAAAAUAAADV/wMAAAAAAAYAAADV/wQAAAAAAAYAAADV/wUAAAAAAAcAAADV/wYAAAAEAAwAAADV/wcAAAAAAAwAAADW/wIAAAAAAAUAAADW/wMAAAAAAAYAAADW/wQAAAAAAAYAAADW/wUAAAAAAAcAAADW/wYAAAAEAAwAAADW/wcAAAAAAAsAAADX/wIAAAAAAAUAAADX/wMAAAAAAAYAAADX/wQAAAAAAAYAAADX/wUAAAAAAAcAAADX/wYAAAAEAAwAAADX/wcAAAAAAAsAAADY/wIAAAAAAAUAAADY/wMAAAAAAAYAAADY/wQAAAAAAAYAAADY/wUAAAAAAAcAAADY/wYAAAAEAAwAAADY/wcAAAAAAAwAAADZ/wIAAAAAAAUAAADZ/wMAAAAAAAYAAADZ/wQAAAAAAAYAAADZ/wUAAAAAAAcAAADZ/wYAAAAEAAwAAADZ/wcAAAAAAAwAAADa/wIAAAAAAAUAAADa/wMAAAAAAAYAAADa/wQAAAAAAAYAAADa/wUAAAAAAAcAAADa/wYAAAAEAAwAAADa/wcAAAAAAAsAAADb/wIAAAAAAAUAAADb/wMAAAAAAAYAAADb/wQAAAAAAAYAAADb/wUAAAAAAAcAAADb/wYAAAAEAAwAAADb/wcAAAAAAAwAAADc/wIAAAAAAAUAAADc/wMAAAAAAAYAAADc/wQAAAAAAAYAAADc/wUAAAAAAAcAAADc/wYAAAAEAAwAAADc/wcAAAAAAAwAAADd/wIAAAAAAAUAAADd/wMAAAAAAAYAAADd/wQAAAAAAAYAAADd/wUAAAAAAAcAAADd/wYAAAAEAAwAAADd/wcAAAAAAAsAAADe/wIAAAAAAAUAAADe/wMAAAAAAAYAAADe/wQAAAAAAAYAAADe/wUAAAAAAAcAAADe/wYAAAAEAAwAAADe/wcAAAAAAAsAAADf/wIAAAAAAAUAAADf/wMAAAAAAAYAAADf/wQAAAAAAAYAAADf/wUAAAAAAAcAAADf/wYAAAAEAAwAAADf/wcAAAAAAAwAAADg/wIAAAAAAAUAAADg/wMAAAAAAAYAAADg/wQAAAAAAAYAAADg/wUAAAAAAAcAAADg/wYAAAAEAAwAAADg/wcAAAAAAAwAAADh/wIAAAAAAAUAAADh/wMAAAAAAAYAAADh/wQAAAAAAAYAAADh/wUAAAAAAAcAAADh/wYAAAAEAAwAAADh/wcAAAAAAAsAAADi/wIAAAAAAAUAAADi/wMAAAAAAAYAAADi/wQAAAAAAAYAAADi/wUAAAAAAAcAAADi/wYAAAAEAAwAAADi/wcAAAAAAAwAAADj/wIAAAAAAAUAAADj/wMAAAAAAAYAAADj/wQAAAAAAAYAAADj/wUAAAAAAAcAAADj/wYAAAAEAAwAAADj/wcAAAAAAAwAAADN/wEAAAAAAAQAAADO/wEAAAAAAAQAAADP/wEAAAAAAAQAAADQ/wEAAAAAAAQAAADR/wEAAAAAAAQAAADS/wEAAAAAAAQAAADT/wEAAAAAAAQAAADU/wEAAAAAAAQAAADV/wEAAAAAAAQAAADW/wEAAAAAAAQAAADX/wEAAAAAAAQAAADY/wEAAAAAAAQAAADZ/wEAAAAAAAQAAADa/wEAAAAAAAQAAADb/wEAAAAAAAQAAADc/wEAAAAAAAQAAADd/wEAAAAAAAQAAADe/wEAAAAAAAQAAADf/wEAAAAAAAQAAADg/wEAAAAAAAQAAADh/wEAAAAAAAQAAADi/wEAAAAAAAQAAADj/wEAAAAAAAQAAAA=")
tile_set = ExtResource("2_p2d4g")
metadata/_edit_lock_ = true

[node name="RidingArea" type="Area2D" parent="."]

[node name="RidingAreaCollision" type="CollisionPolygon2D" parent="RidingArea"]
visible = false
polygon = PackedVector2Array(3, 77, 1041, 84, 1904, 384, -491, 384, -459, 119)

[node name="BottomExit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomExit"]
visible = false
position = Vector2(698.5, 378)
shape = SubResource("RectangleShape2D_p2d4g")

[node name="ShoulderExit" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShoulderExit"]
visible = false
position = Vector2(1365, 265)
polygon = PackedVector2Array(-146, 119, -323, -181, 542, 119)

[node name="WipeoutArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WipeoutArea"]
visible = false
position = Vector2(-14.952881, 0)
scale = Vector2(0.99432355, 1)
polygon = PackedVector2Array(163.88315, 81.99999, 119.631966, 90.99999, 56.27231, 93.99999, -201.18916, 102.99999, -343.99982, 177.99998, -418.42227, 339.99997, -18.150148, 344.99997, 30.123877, 383.99997, -2006.4365, 384.99997, -2002.4137, 84.99999)

[node name="TubeArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TubeArea"]
visible = false
polygon = PackedVector2Array(77, 103, -204, 106, -359, 178, -429, 339, -4, 338, -32, 262)

[connection signal="area_entered" from="RidingArea" to="." method="_on_riding_area_area_entered"]
[connection signal="area_exited" from="RidingArea" to="." method="_on_riding_area_area_exited"]
[connection signal="area_entered" from="BottomExit" to="." method="_on_bottom_exit_area_entered"]
[connection signal="area_entered" from="ShoulderExit" to="." method="_on_shoulder_exit_area_entered"]
[connection signal="area_entered" from="WipeoutArea" to="." method="_on_wipeout_area_area_entered"]
[connection signal="area_entered" from="TubeArea" to="." method="_on_tube_area_area_entered"]
[connection signal="area_exited" from="TubeArea" to="." method="_on_tube_area_area_exited"]
